add partial keyboard support to PlaylistCreator. (right clicking songs using menu key is not functional yet)

--- a/CSS/PlaylistCreator.css
+++ b/CSS/PlaylistCreator.css
@@ -187,7 +187,7 @@ dialog::backdrop{
     opacity: 0;
     z-index: 2;
 }
-.pullsOpen:hover div{
+.pullsOpen:is(:hover, :focus-within) div{
     width: 100%;
     height: 50vh;
     visibility: visible;
