Dialogs now become inert when closed (why doesn't the browser do this itself?) Clicking the playlist no longer scrolls the page up, and pressing Enter on a song doesn't unselect it anymore. Attempt to fix dialogs scrolling page horizontally. Tabbing to playlist now scrolls to currently selected song row. (Need to add right clicking song rows using menu key)

--- a/CSS/PlaylistCreator.css
+++ b/CSS/PlaylistCreator.css
@@ -119,12 +119,12 @@ table{
 .playBackIcon{ pointer-events: none; }
 dialog{
     display: inline-flex;
+    position: fixed;
     top: -100vh;
     width: 0;
     height: 0;
     left: 100%;
     opacity: 0;
-    
     flex-direction: column;
     background-color: white;
     @media not (prefers-reduced-motion) {
@@ -134,20 +134,19 @@ dialog{
 dialog[open] {
     top: 0;
     left: 0;
+    
     height: max-content;
     width: 75%;
     opacity: 1;
+    @media (max-width: 140ch){
+        width: 100%;
+    }
 }
 dialog::backdrop{
     transition: 250ms;
     transition-duration: 250ms;
     animation: darkenColor 250ms ease normal;
     animation-fill-mode: forwards;
-}
-@media (max-width: 140ch){
-    dialog[open] {
-        width: 100%;
-    }
 }
 @keyframes darkenColor{
     from {
