--- a/CSS/PlaylistCreator.css
+++ b/CSS/PlaylistCreator.css
@@ -7,10 +7,7 @@
     fill: red;
     stroke: red;
 }
-table{
-    border-spacing: 1px;
-    border: 1px gray;
-}
+
 .text{
     display: inline;
     unicode-bidi: normal;
@@ -238,4 +235,19 @@ dt {
 }
 dt::after {
   content: ": ";
+}
+
+table{
+    border-spacing: 1px;
+    border: 1px gray;
+}
+.tableBorder:not(:focus-within, :focus){
+    outline: 1px solid rgb(74, 74, 74);
+    border-collapse: collapse;
+    border-radius: 0;
+}
+.songBorder{
+    border-top: 1px solid rgb(74, 74, 74);
+    border-collapse: collapse;
+    border-radius: 0;
 }
