--- a/CSS/PlaylistCreator.css
+++ b/CSS/PlaylistCreator.css
@@ -43,7 +43,7 @@
 .playpause input[type=checkbox]:focus + div {
     box-shadow: 0 0 1px lightblue;
 }
-.hoverToDrop{
+#dragOverDisplay{
     background-color: rgba(173, 216, 230, 0.75);
     pointer-events: none;
     opacity: 0;
@@ -55,7 +55,26 @@
     transition-duration: 200ms;
     z-index: 10;
 }
-.hoverToDrop[draggingOver]{ opacity: 1; }
+#dragOverDisplay[draggingOver]{ opacity: 1; }
+
+#loadingGray{
+    background-color: rgba(30, 30, 30, 0.65);
+    opacity: 0;
+    pointer-events: none;
+    cursor: wait;
+    position: fixed;
+    width: 200vw;
+    height: 200vh;
+    top: 50vh;
+    left: 50vw;
+    z-index: 15;
+    transition: opacity 50ms;
+    transform: translate(-50%, -50%);
+}
+#loadingGray[enable]{
+    opacity: 1;
+    pointer-events: all;
+}
 
 [id="rightClickContextMenu"]{
     width: max-content;
