fix adding songs deleting the ones already added. in addition to flex boxes, TESTING DISPLAYING SONG LENGTHS (it is kinda slow) fix undefined errors by modifying typing file (there's probably an easier way but idc)

--- a/CSS/CompactMode.css
+++ b/CSS/CompactMode.css
@@ -9,8 +9,8 @@
 
 .fileSizeLabel{
     margin-left: auto;
-    flex: 1 0 auto; /* fill all available space */
-    text-align: right;
+    flex: 0 0 auto; /* fill all available space */
+    /*text-align: right;*/
 
     position: unset;
     transform: unset;
