Change song loading to use object urls, as it removes lag entirely loadAndDisplaySongLengths now also uses object urls (IT IS SO FAST)

--- a/CSS/CompactMode.css
+++ b/CSS/CompactMode.css
@@ -12,7 +12,6 @@
     flex: 0 0 auto; /* fill all available space */
     /*text-align: right;*/
 
-    position: unset;
-    transform: unset;
-    left: unset;
+    position: static;
+    transform: none;
 }
