--- a/CSS/PlaylistCreator.css
+++ b/CSS/PlaylistCreator.css
@@ -44,7 +44,9 @@ label[for="playpause"]{
     background-repeat: no-repeat;
     background-position: center;
 }
-label[for="playpause"]:has(input){
+label[for="playpause"]:has(input:not(:checked)){
+    height: 90%;
+    margin-top: 4%;
     background-image: url("../Icons/play-button-arrowhead-svgrepo-com.svg");
     /*https://www.svgrepo.com/svg/164900/play-button-arrowhead*/
 }
@@ -262,7 +264,10 @@ dialog::backdrop{
     z-index: 4;
 }
 .pullsOpen {
-    visibility: visible;position: absolute;width: 100%;height: 100%;background-color: rgba(255, 165, 0, 0.2);
+    visibility: visible;
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 .pullsOpen:is(:hover, :focus-within) div{
     width: 100%;
