--- a/CSS/PlaylistCreator.css
+++ b/CSS/PlaylistCreator.css
@@ -425,3 +425,23 @@ table{
     border-radius: 0;
     width: 100%;
 }
+#mobilePlaylistOptions{
+    transition: 250ms;
+    transition-property: opacity, display, visibility;
+    position: fixed;
+    width: 100%;
+    height: 30px;
+    top: 0;
+    left: 0;
+    background-color: lightblue;
+    opacity: 0;
+    z-index: 1;
+    display: flex;
+    visibility: hidden;
+    pointer-events: none;
+}
+#mobilePlaylistOptions[data-active]{
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
