add title text with keybinds to ui hovered time display now uses transform: translate for hardware acceleration L - loop song S - shuffle songs

--- a/CSS/PlaylistCreator.css
+++ b/CSS/PlaylistCreator.css
@@ -387,11 +387,12 @@ input[type=number]{
     width: 100%;
 }
 .cell{ text-align: center; }
+
 dt {
-  font-weight: bold;
+    font-weight: bold;
 }
-dt::after {
-  content: ": ";
+dd {
+    font-weight: normal;
 }
 
 #Playlist_Viewer {
