--- a/CSS/PlaylistCreator.css
+++ b/CSS/PlaylistCreator.css
@@ -281,7 +281,7 @@ dialog::backdrop{
 .pullsOpen:is(:hover, :focus-within) div{
     width: 100%;
     height: 200px;
-    @media(max-height: calc( 200px + max(4vw, 3em) )){ /* i cant use var(--mainTableControlsHeight) here */
+    @media(max-height: calc( 200px + calc(2em + 1vw) )){ /* i cant use var(--mainTableControlsHeight) here */
         height: calc(100dvh - var(--mainTableControlsHeight));
     }
     visibility: visible;
