--- a/CSS/PlaylistCreator.css
+++ b/CSS/PlaylistCreator.css
@@ -171,6 +171,8 @@ label[for="repeatButton"]:has(input:checked){
 }
 .contextIcon{
     position: relative;
+    width: 20px;
+    height: 20px;
     top: 50%;
     transform: translate(0, -50%);
 }
